Tabs overflow fix for when there are too many checklists

--- a/static/functional.css
+++ b/static/functional.css
@@ -130,6 +130,10 @@
     cursor: pointer;
 }
 
+.ox-a {
+    overflow-x: auto;
+}
+
 .oy-a {
     overflow-y: auto;
 }
